--- a/wireframe/style.css
+++ b/wireframe/style.css
@@ -1,9 +1,5 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-body {
-  height: 100vh;
+#main {
+  width: 1000px;
+  height: 500px;
+  background-color: black;
 }
