--- a/wireframe/style.css
+++ b/wireframe/style.css
@@ -1,5 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 #main {
-  width: 1000px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
   background-color: black;
 }
