--- a/wireframe/style.css
+++ b/wireframe/style.css
@@ -1,16 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 #main {
-  width: 100%;
-  height: 100%;
+  width: 1000px;
+  height: 500px;
   background-color: black;
 }
